# AskamaTest

./: .gitignore  Cargo.toml  LICENSE  README.md
src/: main.rs
src/extensions/: flashes.rs  form_validator.rs  mod.rs  pagination.rs  state.rs
src/forms/: user.rs
src/inits/: mod.rs  serverstate.rs  systemstate.rs
src/models/: user.rs
src/site/: error_pages.rs  main.rs  mod.rs
static/css/: grid.css  lists.css  main.css  markdown.css  ui.css  uikit.css  vim.css
static/uikit/scss/: index.scss
templates/: base.html
templates/components/: header.html  menu.html  who-is-online-card.html
templates/error/: 404.htm
templates/main/: main.html
templates/user/: reports.htm  sign_in.htm  users.htm  view_create.htm  view_edit.htm  views.htm
theme/: theme.yaml
