[package]
name = "structuresite2"
version = "0.1.0"
authors = ["Andrew Wheeler <genusistimelord@gmail.com>"]
edition = "2021"
resolver = "2"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.5"
axum-macros = "0.2"
askama = { version = "0.11", git = "https://github.com/djc/askama.git", features = [
    "serde-json",
    "with-axum",
] }
askama_axum = { version = "0.1", git = "https://github.com/djc/askama.git" }
askama_shared = { git = "https://github.com/djc/askama.git" }
askama_derive = { git = "https://github.com/djc/askama.git" }
serde = "1.0"
serde_json = "1.0"
anyhow = "1.0"
toml = "0.5"
chrono = { version = "0.4", features = ["clock", "serde", "std"] }
bcrypt = "0.12"
marked-yaml = "0.2.0"
sass-rs = "0.2.2"
tokio = { version = "1.17", features = ["full"] }
log = { version = "0.4", default-features = false }
futures = "0.3"
async-trait = "0.1"
parking_lot = "0.12"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tower-http = { version = "0.2", features = ["full"] }
axum-flash = "0.4.0"
validator = { version = "0.14", features = ["derive"] }
thiserror = "1.0"
http-body = "0.4"
async-recursion = "1.0"
uuid = { version = "0.8", features = ["v4", "serde"] }
rand = "0.8"
axum_database_sessions = { git = "https://github.com/AscendingCreations/AxumSessions.git" }
axum_sessions_auth = { git = "https://github.com/AscendingCreations/AxumSessionsAuth.git" }
axum_csrf = { git = "https://github.com/AscendingCreations/AxumCSRF.git" }
tower-cookies = "0.6"
backtrace = "0.3"
sqlx = { version = "0.5", features = [
    "macros",
    "offline",
    "migrate",
    "mssql",
    "postgres",
    "sqlite",
    "all-types",
    "runtime-tokio-rustls",
] }
env_logger = "0.9.0"
tower-redis = "0.1.0"
regex = "1.5.5"
http = "0.2"
