[package]
name = "structuresite2"
version = "0.1.0"
authors = ["Andrew Wheeler <genusistimelord@gmail.com>"]
edition = "2021"
resolver = "2"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
askama = { version = "0.12", features = [
    "serde-json",
    "with-axum",
] }
axum = "0.6.19"
axum-macros = "0.3.8"
askama_axum = { version = "0.3.0" }
serde = "1.0.180"
serde_json = "1.0.104"
anyhow = "1.0.72"
toml = "0.7.6"
chrono = { version = "0.4.26", features = ["clock", "serde", "std"] }
bcrypt = "0.15.0"
tokio = { version = "1.29.1", features = ["full"] }
log = { version = "0.4.19", default-features = false }
futures = "0.3.28"
async-trait = "0.1.72"
parking_lot = "0.12.1"
tracing = "0.1.37"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tower-http = { version = "0.4.3", features = ["full"] }
axum-flash = "0.7.0"
validator = { version = "0.16.1", features = ["derive"] }
thiserror = "1.0.44"
http-body = "0.4.5"
async-recursion = "1.0.4"
uuid = { version = "1.4.1", features = ["v4", "serde"] }
rand = "0.8.5"
axum_session = { version = "0.3.4" }
axum_session_auth = { version = "0.3.0" }
axum_csrf = { version = "0.7.2" }
tower-cookies = "0.9.0"
backtrace = "0.3.68"
sqlx = { version = "0.7.1", features = [
    "macros",
    "postgres",
    "sqlite",
    "_unstable-all-types",
    "runtime-tokio-rustls",
] }
env_logger = "0.10.0"
tower-redis = "0.2.0"
regex = "1.9.1"
http = "0.2.9"
