[package]
name = "test_site"
version = "0.1.0"
authors = ["Andrew Wheeler <genusistimelord@gmail.com>"]
edition = "2021"
resolver = "2"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
askama = { version = "0.12.1", features = [
    "serde-json",
    "with-axum",
] }
axum = "0.7.7"
axum-macros = "0.4.2"
askama_axum = { version = "0.4.0" }
serde = "1.0.210"
serde_json = "1.0.128"
anyhow = "1.0.89"
toml = "0.8.19"
chrono = { version = "0.4.38", features = ["clock", "serde", "std"] }
bcrypt = "0.15.1"
tokio = { version = "1.40.0", features = ["full"] }
log = { version = "0.4.22", default-features = false }
futures = "0.3.31"
async-trait = "0.1.83"
parking_lot = "0.12.3"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
tower-http = { version = "0.6.1", features = ["full"] }
axum-flash = "0.8.0"
validator = { version = "0.18.1", features = ["derive"] }
thiserror = "1.0.64"
http-body = "1.0.1"
async-recursion = "1.1.1"
uuid = { version = "1.10.0", features = ["v4", "serde"] }
rand = "0.8.5"
axum_session = { version = "0.14.2" }
axum_session_auth = { version = "0.14.1" }
axum_csrf = { version = "0.10.0" }
backtrace = "0.3.74"
sqlx = { version = "0.8.2", features = [
    "macros",
    "postgres",
    "sqlite",
    "_unstable-all-types",
    "runtime-tokio",
    "tls-rustls"
] }
env_logger = "0.11.5"
tower-redis = "0.3.0"
regex = "1.11.0"
http = "1.1.0"
axum_session_sqlx = { version = "0.3.0", features = [ "postgres", "tls-rustls"] }
hyper = "1.0.1"